@@ -1,0 +1,8 @@
+<?php
+
+class Knowledgeroot_Db_Page_History extends Knowledgeroot_Db_Table_Abstract
+{
+	protected $_name = 'page_history';
+	protected $_primary = 'id';
+	protected $_sequence = 'seq_page_history';
+}
