@@ -1,6 +1,7 @@
 20131016 - fhabermann
 * added subtitle, table of contents and descripion for page
 * show created by and create date for page
+* enable show of page history
 
 20131014 - fhabermann
 * added anker.js to handle ankers
